--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,7 @@
 {
-    "url": "https://eraofvalor.com",
     "name": "Era of Valor",
-    "iconUrl": "https://ton.vote/logo.png"
+    "url": "https://eraofvalor.com",
+    "iconUrl": "https://ton.vote/logo.png",
+    "tonAddress": "UQBlvlMVBZ5sqM_fKc1qGCR5KrYHEbqjJCHBMYLAZ5vVTwKo",
+    "network": "testnet"
 }
